# ai-teams

./: .gitignore  CLAUDE.md  README.md  ecosystem.config.js  setup.sh
.claude/memory/: README.md
.claude/memory/api-design/: README.md
.next/: trace  trace-build
archive/: ai_teams-final-backup.sql
backend/: .gitignore  pyproject.toml
backend-node/: package-lock.json  package.json
backend-node/.next/: trace  trace-build
backend-node/data/: registry.json
backend-node/prisma/: schema.prisma
backend-node/src/: index.ts  telegram-bot.ts
backend-node/tests/: md-roundtrip.test.ts
backend/.next/: trace  trace-build
backend/.next/cache/: .previewinfo  .rscinfo
backend/app/: config.py  main.py  mcp_server.py
backend/app/api/: backlog.py  board.py  projects.py  sprints.py  terminal.py  tmux.py
backend/app/models/: __init__.py  backlog_item.py  project.py  sprint.py  sprint_item.py
backend/app/tests/: conftest.py  test_backlog.py  test_board.py  test_sprints.py  test_terminal.py
docs/board/: _meta.json
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/files/: page.tsx
frontend/components/: AgentPaneView.tsx  AppSidebar.tsx  BacklogView.tsx  CreateProjectDialog.tsx  FileManager.tsx  FileViewer.tsx  FolderBrowser.tsx  GitChangesView.tsx  ProjectDashboard.tsx  ProjectNav.tsx  Sidebar.tsx  SprintPanel.tsx  WebTerminal.tsx
frontend/lib/: api.ts  auth.ts  types.ts  useBoardWs.ts  useTmuxWs.ts
skills/tmux-team-creator-mcp/: SKILL.md
tools/: init-md-registry.ts
(+46 files in other folders)
